<resources>
    <string name="app_name">NotesApp</string>
    <string name="search_hint">Search Notes</string>
    <string name="title">Title…</string>
    <string name="start_typing">Start Typing</string>
    <string name="image_back">Image Back</string>
    <string name="image_check">Image Check</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="subtitle">Subtitle…</string>
    <string name="notes">Notes…</string>
    <string name="red_dot">Red Dot</string>
    <string name="yellow_dot">Yellow Dot</string>
    <string name="green_dot">Green Dot</string>
    <string name="add_notes">Add Notes</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="_1_january_2000">1 January 2000</string>
    <string name="question_to_delete">Are you sure want to delete\n this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_notes">Check Notes</string>
    <string name="priority_one">1</string>
    <string name="priority_two">2</string>
    <string name="priority_three">3</string>
    <string name="notes_created_success">Notes Created Successfully</string>
    <string name="notes_updated_success">Notes Updated Successfully</string>

</resources>