<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.fragments.CreateNotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_txt_shape"
            android:hint="@string/title"
            android:maxLines="1"
            android:id="@+id/edtTitle"
            android:padding="10dp"
            android:textColorHint="#D1D1D1"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_txt_shape"
            android:hint="@string/subtitle"
            android:maxLines="1"
            android:id="@+id/edtSubTitle"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#D1D1D1"
            android:importantForAutofill="no" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/redDot"
                android:background="@drawable/red_dot"
                android:contentDescription="@string/red_dot" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/yellowDot"
                android:background="@drawable/yellow_dot"
                android:contentDescription="@string/yellow_dot" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/greenDot"
                android:background="@drawable/green_dot"
                android:contentDescription="@string/green_dot" />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_txt_shape"
            android:hint="@string/notes"
            android:id="@+id/edtNotes"
            android:gravity="start"
            android:padding="10dp"
            android:textColorHint="#D1D1D1"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="26dp"
        android:src="@drawable/ic_check_24"
        app:backgroundTint="@color/red"
        android:contentDescription="@string/add_notes" />

</FrameLayout>