<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_arrow_back_24"
                android:contentDescription="@string/image_back" />

            <ImageView
                android:id="@+id/imageCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_check_24"
                android:contentDescription="@string/image_check" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/title"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/start_typing"
        android:inputType="textPersonName"
        android:lineSpacingMultiplier="1.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="@id/etTitle"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>